--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         }
     ],
     "require": {
+        "react/stream": "^0.7.0",
+        "react/socket": "^0.8.0"
     },
     "autoload": {
         "psr-4": {
@@ -29,6 +31,6 @@
         }
     },
     "require-dev": {
-        "voryx/thruway": "ratchet-0.4-dev"
+        "voryx/thruway": "0.5.x-dev"
     }
 }
